--- a/final_brain_tumor_segmentation.ipynb
+++ b/final_brain_tumor_segmentation.ipynb
@@ -52827,6 +52827,15 @@
             "Processed patient: 0\n",
             "281/850 [========>.....................] - ETA: 2:53:02 - loss: 0.0973 - accuracy: 0.9769 - mean_io_u_3: 0.3756 - dice_coef: 0.2735 - precision: 0.9771 - sensitivity: 0.9741 - specificity: 0.9936Batch ['BraTS2021\\\\BraTS2021_01459']\n",
             "Case Path: Data/BraTS2021\\BraTS2021_01459\\BraTS2021_01459\n",
+            "Processed patient: 0\n",
+            "282/850 [========>.....................] - ETA: 2:52:29 - loss: 0.0971 - accuracy: 0.9770 - mean_io_u_3: 0.3756 - dice_coef: 0.2735 - precision: 0.9772 - sensitivity: 0.9741 - specificity: 0.9937Batch ['BraTS2021\\\\BraTS2021_01454']\n",
+            "Case Path: Data/BraTS2021\\BraTS2021_01454\\BraTS2021_01454\n",
+            "Processed patient: 0\n",
+            "283/850 [========>.....................] - ETA: 2:51:55 - loss: 0.0970 - accuracy: 0.9770 - mean_io_u_3: 0.3756 - dice_coef: 0.2734 - precision: 0.9773 - sensitivity: 0.9742 - specificity: 0.9937Batch ['BraTS2021\\\\BraTS2021_01349']\n",
+            "Case Path: Data/BraTS2021\\BraTS2021_01349\\BraTS2021_01349\n",
+            "Processed patient: 0\n",
+            "284/850 [=========>....................] - ETA: 2:51:22 - loss: 0.0968 - accuracy: 0.9771 - mean_io_u_3: 0.3756 - dice_coef: 0.2734 - precision: 0.9773 - sensitivity: 0.9743 - specificity: 0.9937Batch ['BraTS2021\\\\BraTS2021_01631']\n",
+            "Case Path: Data/BraTS2021\\BraTS2021_01631\\BraTS2021_01631\n",
             "Processed patient: 0\n"
           ]
         }
