--- a/final_brain_tumor_segmentation.ipynb
+++ b/final_brain_tumor_segmentation.ipynb
@@ -52836,6 +52836,12 @@
             "Processed patient: 0\n",
             "284/850 [=========>....................] - ETA: 2:51:22 - loss: 0.0968 - accuracy: 0.9771 - mean_io_u_3: 0.3756 - dice_coef: 0.2734 - precision: 0.9773 - sensitivity: 0.9743 - specificity: 0.9937Batch ['BraTS2021\\\\BraTS2021_01631']\n",
             "Case Path: Data/BraTS2021\\BraTS2021_01631\\BraTS2021_01631\n",
+            "Processed patient: 0\n",
+            "285/850 [=========>....................] - ETA: 2:50:49 - loss: 0.0965 - accuracy: 0.9771 - mean_io_u_3: 0.3756 - dice_coef: 0.2734 - precision: 0.9774 - sensitivity: 0.9743 - specificity: 0.9937Batch ['BraTS2021\\\\BraTS2021_01356']\n",
+            "Case Path: Data/BraTS2021\\BraTS2021_01356\\BraTS2021_01356\n",
+            "Processed patient: 0\n",
+            "286/850 [=========>....................] - ETA: 2:50:18 - loss: 0.0965 - accuracy: 0.9772 - mean_io_u_3: 0.3756 - dice_coef: 0.2733 - precision: 0.9774 - sensitivity: 0.9744 - specificity: 0.9937Batch ['BraTS2021\\\\BraTS2021_01231']\n",
+            "Case Path: Data/BraTS2021\\BraTS2021_01231\\BraTS2021_01231\n",
             "Processed patient: 0\n"
           ]
         }
