--- a/final_brain_tumor_segmentation.ipynb
+++ b/final_brain_tumor_segmentation.ipynb
@@ -52842,6 +52842,12 @@
             "Processed patient: 0\n",
             "286/850 [=========>....................] - ETA: 2:50:18 - loss: 0.0965 - accuracy: 0.9772 - mean_io_u_3: 0.3756 - dice_coef: 0.2733 - precision: 0.9774 - sensitivity: 0.9744 - specificity: 0.9937Batch ['BraTS2021\\\\BraTS2021_01231']\n",
             "Case Path: Data/BraTS2021\\BraTS2021_01231\\BraTS2021_01231\n",
+            "Processed patient: 0\n",
+            "287/850 [=========>....................] - ETA: 2:49:45 - loss: 0.0969 - accuracy: 0.9771 - mean_io_u_3: 0.3756 - dice_coef: 0.2732 - precision: 0.9774 - sensitivity: 0.9744 - specificity: 0.9937Batch ['BraTS2021\\\\BraTS2021_01389']\n",
+            "Case Path: Data/BraTS2021\\BraTS2021_01389\\BraTS2021_01389\n",
+            "Processed patient: 0\n",
+            "288/850 [=========>....................] - ETA: 2:49:13 - loss: 0.0967 - accuracy: 0.9772 - mean_io_u_3: 0.3756 - dice_coef: 0.2732 - precision: 0.9774 - sensitivity: 0.9744 - specificity: 0.9937Batch ['BraTS2021\\\\BraTS2021_01484']\n",
+            "Case Path: Data/BraTS2021\\BraTS2021_01484\\BraTS2021_01484\n",
             "Processed patient: 0\n"
           ]
         }
